<?xml version="1.0"?>
<package format="2">
  <name>z1_panda_bridge</name>
  <version>0.0.1</version>
  <description>Relay Panda state to Z1</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
